@@ -1,23 +1,21 @@
 package io.quarkus.spring.web.deployment;
 
-import static org.jboss.jandex.AnnotationInstance.create;
-import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.DEFAULT_VALUE;
-import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.REST_COOKIE_PARAM;
-import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.REST_MATRIX_PARAM;
-import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.REST_PATH_PARAM;
-import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.REST_QUERY_PARAM;
+import static io.quarkus.deployment.annotations.ExecutionTime.STATIC_INIT;
 
+import java.io.IOException;
 import java.lang.reflect.Modifier;
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
+import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
+import java.util.function.Consumer;
 
-import javax.ws.rs.Priorities;
-import javax.ws.rs.core.HttpHeaders;
-import javax.ws.rs.core.Response;
+import javax.ws.rs.core.MediaType;
+import javax.ws.rs.ext.Providers;
 
 import org.jboss.jandex.AnnotationInstance;
 import org.jboss.jandex.AnnotationTarget;
@@ -28,38 +26,39 @@ import org.jboss.jandex.IndexView;
 import org.jboss.jandex.MethodInfo;
 import org.jboss.jandex.Type;
 import org.jboss.logging.Logger;
-import org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames;
-import org.jboss.resteasy.reactive.common.processor.scanning.ResteasyReactiveScanner;
-import org.jboss.resteasy.reactive.common.processor.transformation.AnnotationsTransformer;
-import org.jboss.resteasy.reactive.common.processor.transformation.Transformation;
-import org.jboss.resteasy.reactive.server.injection.ContextProducers;
-import org.jboss.resteasy.reactive.server.model.FixedHandlerChainCustomizer;
-import org.jboss.resteasy.reactive.server.model.HandlerChainCustomizer;
-import org.jboss.resteasy.reactive.server.processor.scanning.MethodScanner;
-import org.springframework.http.HttpStatus;
-import org.springframework.web.server.ResponseStatusException;
+import org.jboss.resteasy.core.MediaTypeMap;
+import org.jboss.resteasy.plugins.server.servlet.ResteasyContextParameters;
+import org.jboss.resteasy.spi.ResteasyDeployment;
+import org.jboss.resteasy.spi.metadata.SpringResourceBuilder;
+import org.jboss.resteasy.spring.web.ResponseEntityFeature;
+import org.jboss.resteasy.spring.web.ResponseStatusFeature;
 
+import io.quarkus.arc.deployment.BeanArchiveIndexBuildItem;
 import io.quarkus.arc.deployment.BeanDefiningAnnotationBuildItem;
-import io.quarkus.arc.deployment.UnremovableBeanBuildItem;
 import io.quarkus.arc.processor.BuiltinScope;
 import io.quarkus.deployment.Feature;
 import io.quarkus.deployment.GeneratedClassGizmoAdaptor;
+import io.quarkus.deployment.IsDevelopment;
 import io.quarkus.deployment.annotations.BuildProducer;
 import io.quarkus.deployment.annotations.BuildStep;
-import io.quarkus.deployment.builditem.CombinedIndexBuildItem;
+import io.quarkus.deployment.annotations.Record;
 import io.quarkus.deployment.builditem.FeatureBuildItem;
 import io.quarkus.deployment.builditem.GeneratedClassBuildItem;
 import io.quarkus.deployment.builditem.nativeimage.ReflectiveClassBuildItem;
 import io.quarkus.deployment.builditem.nativeimage.ReflectiveHierarchyIgnoreWarningBuildItem;
+import io.quarkus.deployment.util.ServiceUtil;
 import io.quarkus.gizmo.ClassOutput;
-import io.quarkus.resteasy.reactive.server.spi.AnnotationsTransformerBuildItem;
-import io.quarkus.resteasy.reactive.server.spi.MethodScannerBuildItem;
-import io.quarkus.resteasy.reactive.spi.AdditionalResourceClassBuildItem;
-import io.quarkus.resteasy.reactive.spi.ExceptionMapperBuildItem;
+import io.quarkus.resteasy.common.deployment.ResteasyCommonProcessor;
+import io.quarkus.resteasy.common.spi.ResteasyJaxrsProviderBuildItem;
+import io.quarkus.resteasy.runtime.ExceptionMapperRecorder;
+import io.quarkus.resteasy.runtime.NonJaxRsClassMappings;
+import io.quarkus.resteasy.server.common.deployment.ResteasyDeploymentCustomizerBuildItem;
+import io.quarkus.resteasy.server.common.spi.AdditionalJaxRsResourceDefiningAnnotationBuildItem;
 import io.quarkus.resteasy.server.common.spi.AdditionalJaxRsResourceMethodAnnotationsBuildItem;
-import io.quarkus.spring.web.runtime.ResponseEntityHandler;
+import io.quarkus.resteasy.server.common.spi.AdditionalJaxRsResourceMethodParamAnnotations;
 import io.quarkus.spring.web.runtime.ResponseStatusExceptionMapper;
-import io.quarkus.spring.web.runtime.ResponseStatusHandler;
+import io.quarkus.undertow.deployment.IgnoredServletContainerInitializerBuildItem;
+import io.quarkus.undertow.deployment.ServletInitParamBuildItem;
 
 public class SpringWebProcessor {
 
@@ -70,20 +69,19 @@ public class SpringWebProcessor {
 
     private static final DotName REQUEST_MAPPING = DotName
             .createSimple("org.springframework.web.bind.annotation.RequestMapping");
-    private static final DotName GET_MAPPING = DotName.createSimple("org.springframework.web.bind.annotation.GetMapping");
-    private static final DotName POST_MAPPING = DotName.createSimple("org.springframework.web.bind.annotation.PostMapping");
-    private static final DotName PUT_MAPPING = DotName.createSimple("org.springframework.web.bind.annotation.PutMapping");
-    private static final DotName DELETE_MAPPING = DotName.createSimple("org.springframework.web.bind.annotation.DeleteMapping");
-    private static final DotName PATCH_MAPPING = DotName.createSimple("org.springframework.web.bind.annotation.PatchMapping");
-    private static final List<DotName> MAPPING_ANNOTATIONS = List.of(REQUEST_MAPPING, GET_MAPPING, POST_MAPPING,
-            PUT_MAPPING, DELETE_MAPPING, PATCH_MAPPING);
-
     private static final DotName PATH_VARIABLE = DotName.createSimple("org.springframework.web.bind.annotation.PathVariable");
-    private static final DotName REQUEST_PARAM = DotName.createSimple("org.springframework.web.bind.annotation.RequestParam");
-    private static final DotName REQUEST_HEADER = DotName.createSimple("org.springframework.web.bind.annotation.RequestHeader");
-    private static final DotName COOKIE_VALUE = DotName.createSimple("org.springframework.web.bind.annotation.CookieValue");
-    private static final DotName MATRIX_VARIABLE = DotName
-            .createSimple("org.springframework.web.bind.annotation.MatrixVariable");
+
+    private static final List<DotName> MAPPING_ANNOTATIONS;
+
+    static {
+        MAPPING_ANNOTATIONS = Arrays.asList(
+                REQUEST_MAPPING,
+                DotName.createSimple("org.springframework.web.bind.annotation.GetMapping"),
+                DotName.createSimple("org.springframework.web.bind.annotation.PostMapping"),
+                DotName.createSimple("org.springframework.web.bind.annotation.PutMapping"),
+                DotName.createSimple("org.springframework.web.bind.annotation.DeleteMapping"),
+                DotName.createSimple("org.springframework.web.bind.annotation.PatchMapping"));
+    }
 
     private static final DotName RESPONSE_STATUS = DotName
             .createSimple("org.springframework.web.bind.annotation.ResponseStatus");
@@ -100,14 +98,38 @@ public class SpringWebProcessor {
     private static final DotName HTTP_ENTITY = DotName.createSimple("org.springframework.http.HttpEntity");
     private static final DotName RESPONSE_ENTITY = DotName.createSimple("org.springframework.http.ResponseEntity");
 
-    private static final Set<DotName> DISALLOWED_EXCEPTION_CONTROLLER_RETURN_TYPES = Set.of(
-            MODEL_AND_VIEW, VIEW, MODEL, HTTP_ENTITY);
-
-    private static final String DEFAULT_NONE = "\n\t\t\n\t\t\n\uE000\uE001\uE002\n\t\t\t\t\n"; // from ValueConstants
+    private static final Set<DotName> DISALLOWED_EXCEPTION_CONTROLLER_RETURN_TYPES = new HashSet<>(Arrays.asList(
+            MODEL_AND_VIEW, VIEW, MODEL, HTTP_ENTITY));
 
     @BuildStep
     FeatureBuildItem registerFeature() {
         return new FeatureBuildItem(Feature.SPRING_WEB);
+    }
+
+    @BuildStep
+    public IgnoredServletContainerInitializerBuildItem ignoreSpringServlet() {
+        return new IgnoredServletContainerInitializerBuildItem("org.springframework.web.SpringServletContainerInitializer");
+    }
+
+    @BuildStep
+    public AdditionalJaxRsResourceDefiningAnnotationBuildItem additionalJaxRsResourceDefiningAnnotation() {
+        return new AdditionalJaxRsResourceDefiningAnnotationBuildItem(REST_CONTROLLER_ANNOTATION);
+    }
+
+    @BuildStep
+    public AdditionalJaxRsResourceMethodAnnotationsBuildItem additionalJaxRsResourceMethodAnnotationsBuildItem() {
+        return new AdditionalJaxRsResourceMethodAnnotationsBuildItem(MAPPING_ANNOTATIONS);
+    }
+
+    @BuildStep
+    public AdditionalJaxRsResourceMethodParamAnnotations additionalJaxRsResourceMethodParamAnnotations() {
+        return new AdditionalJaxRsResourceMethodParamAnnotations(
+                Arrays.asList(DotName.createSimple("org.springframework.web.bind.annotation.RequestParam"),
+                        PATH_VARIABLE,
+                        DotName.createSimple("org.springframework.web.bind.annotation.RequestBody"),
+                        DotName.createSimple("org.springframework.web.bind.annotation.MatrixVariable"),
+                        DotName.createSimple("org.springframework.web.bind.annotation.RequestHeader"),
+                        DotName.createSimple("org.springframework.web.bind.annotation.CookieValue")));
     }
 
     @BuildStep
@@ -131,279 +153,48 @@ public class SpringWebProcessor {
     }
 
     @BuildStep
-    public void registerAdditionalResourceClasses(CombinedIndexBuildItem index,
-            BuildProducer<AdditionalResourceClassBuildItem> additionalResourceClassProducer) {
+    public void process(BeanArchiveIndexBuildItem beanArchiveIndexBuildItem,
+            BuildProducer<ReflectiveClassBuildItem> reflectiveClass,
+            BuildProducer<ServletInitParamBuildItem> initParamProducer,
+            BuildProducer<ResteasyDeploymentCustomizerBuildItem> deploymentCustomizerProducer) {
 
-        validateControllers(index.getIndex());
+        validateControllers(beanArchiveIndexBuildItem);
 
-        for (AnnotationInstance restController : index.getIndex()
-                .getAnnotations(REST_CONTROLLER_ANNOTATION)) {
-            ClassInfo targetClass = restController.target().asClass();
-            additionalResourceClassProducer.produce(new AdditionalResourceClassBuildItem(targetClass,
-                    getSinglePathOfInstance(targetClass.classAnnotation(REQUEST_MAPPING), "")));
+        final IndexView index = beanArchiveIndexBuildItem.getIndex();
+        final Collection<AnnotationInstance> annotations = index.getAnnotations(REST_CONTROLLER_ANNOTATION);
+        if (annotations.isEmpty()) {
+            return;
         }
-    }
 
-    @BuildStep
-    public void methodAnnotationsTransformer(BuildProducer<AnnotationsTransformerBuildItem> producer,
-            BuildProducer<AdditionalJaxRsResourceMethodAnnotationsBuildItem> additionalJaxRsMethodProducer) {
-        // This is useful mainly to let Hibernate Validator know that methods annotated with these annotations
-        // are to be validated differently,
-        // e.g. by yielding HTTP status 400 instead of 500 on constraint violation for a method parameter.
-        // The effect on RestEasy itself is negligible: it will only register the annotated methods for reflection,
-        // which we already do.
-        additionalJaxRsMethodProducer.produce(new AdditionalJaxRsResourceMethodAnnotationsBuildItem(MAPPING_ANNOTATIONS));
+        final Set<String> classNames = new HashSet<>();
+        for (AnnotationInstance annotation : annotations) {
+            classNames.add(annotation.target().asClass().toString());
+        }
 
-        producer.produce(new AnnotationsTransformerBuildItem(new AnnotationsTransformer() {
-
+        // initialize the init params that will be used in case of servlet
+        initParamProducer.produce(
+                new ServletInitParamBuildItem(
+                        ResteasyContextParameters.RESTEASY_SCANNED_RESOURCE_CLASSES_WITH_BUILDER,
+                        SpringResourceBuilder.class.getName() + ":" + String.join(",", classNames)));
+        // customize the deployment that will be used in case of RESTEasy standalone
+        deploymentCustomizerProducer.produce(new ResteasyDeploymentCustomizerBuildItem(new Consumer<ResteasyDeployment>() {
             @Override
-            public boolean appliesTo(AnnotationTarget.Kind kind) {
-                return kind == AnnotationTarget.Kind.METHOD;
+            public void accept(ResteasyDeployment resteasyDeployment) {
+                resteasyDeployment.getScannedResourceClassesWithBuilder().put(SpringResourceBuilder.class.getName(),
+                        new ArrayList<>(classNames));
             }
-
-            @Override
-            public void transform(TransformationContext transformationContext) {
-                AnnotationTarget target = transformationContext.getTarget();
-                if (target.kind() != AnnotationTarget.Kind.METHOD) {
-                    return;
-                }
-                MethodInfo methodInfo = target.asMethod();
-                Transformation transform = transformationContext.transform();
-                DotName jaxRSMethodAnnotation = null;
-                String path = null;
-                String[] produces = null;
-                String[] consumes = null;
-
-                AnnotationInstance mappingAnnotationInstance = methodInfo.annotation(REQUEST_MAPPING);
-                if (mappingAnnotationInstance != null) {
-                    AnnotationValue methodValue = mappingAnnotationInstance.value("method");
-                    if (methodValue == null) {
-                        jaxRSMethodAnnotation = ResteasyReactiveDotNames.GET;
-                    } else {
-                        String[] methods = methodValue.asEnumArray();
-                        if (methods.length > 1) {
-                            throw new IllegalArgumentException(
-                                    "Usage of multiple methods using '@RequestMapping' is not allowed. Offending method is '"
-                                            + methodInfo.declaringClass().name() + "#" + methodInfo.name() + "'");
-                        }
-                        DotName methodDotName = ResteasyReactiveScanner.METHOD_TO_BUILTIN_HTTP_ANNOTATIONS.get(methods[0]);
-                        if (methodDotName == null) {
-                            throw new IllegalArgumentException(
-                                    "Unsupported HTTP method '" + methods[0] + "' for @RequestMapping. Offending method is '"
-                                            + methodInfo.declaringClass().name() + "#" + methodInfo.name() + "'");
-                        }
-                        jaxRSMethodAnnotation = methodDotName;
-                    }
-                } else {
-                    if (methodInfo.hasAnnotation(GET_MAPPING)) {
-                        jaxRSMethodAnnotation = ResteasyReactiveDotNames.GET;
-                        mappingAnnotationInstance = methodInfo.annotation(GET_MAPPING);
-                    } else if (methodInfo.hasAnnotation(POST_MAPPING)) {
-                        jaxRSMethodAnnotation = ResteasyReactiveDotNames.POST;
-                        mappingAnnotationInstance = methodInfo.annotation(POST_MAPPING);
-                    } else if (methodInfo.hasAnnotation(PUT_MAPPING)) {
-                        jaxRSMethodAnnotation = ResteasyReactiveDotNames.PUT;
-                        mappingAnnotationInstance = methodInfo.annotation(PUT_MAPPING);
-                    } else if (methodInfo.hasAnnotation(DELETE_MAPPING)) {
-                        jaxRSMethodAnnotation = ResteasyReactiveDotNames.DELETE;
-                        mappingAnnotationInstance = methodInfo.annotation(DELETE_MAPPING);
-                    } else if (methodInfo.hasAnnotation(PATCH_MAPPING)) {
-                        jaxRSMethodAnnotation = ResteasyReactiveDotNames.PATCH;
-                        mappingAnnotationInstance = methodInfo.annotation(PATCH_MAPPING);
-                    }
-                }
-
-                if (jaxRSMethodAnnotation == null) {
-                    return;
-                }
-
-                produces = getStringArrayValueOfInstance(mappingAnnotationInstance, "produces");
-                consumes = getStringArrayValueOfInstance(mappingAnnotationInstance, "consumes");
-                path = getSinglePathOfInstance(mappingAnnotationInstance, null);
-
-                transform.add(jaxRSMethodAnnotation);
-                addStringArrayValuedAnnotation(transform, target, consumes, ResteasyReactiveDotNames.CONSUMES);
-                addStringArrayValuedAnnotation(transform, target, produces, ResteasyReactiveDotNames.PRODUCES);
-                addPathAnnotation(transform, target, path);
-
-                for (AnnotationInstance annotation : methodInfo.annotations()) {
-                    if (annotation.target().kind() == AnnotationTarget.Kind.METHOD_PARAMETER) {
-                        DotName annotationName = annotation.name();
-                        //TODO: add Cookie and Matrix handling
-                        if (annotationName.equals(REQUEST_PARAM)
-                                || annotationName.equals(REQUEST_HEADER)
-                                || annotationName.equals(COOKIE_VALUE)
-                                || annotationName.equals(MATRIX_VARIABLE)) {
-
-                            DotName jaxRsAnnotation;
-                            if (annotationName.equals(REQUEST_PARAM)) {
-                                jaxRsAnnotation = REST_QUERY_PARAM;
-                            } else if (annotationName.equals(REQUEST_HEADER)) {
-                                jaxRsAnnotation = REST_QUERY_PARAM;
-                            } else if (annotationName.equals(COOKIE_VALUE)) {
-                                jaxRsAnnotation = REST_COOKIE_PARAM;
-                            } else {
-                                jaxRsAnnotation = REST_MATRIX_PARAM;
-                            }
-
-                            String name = getNameOrDefaultFromParamAnnotation(annotation);
-                            List<AnnotationValue> annotationValues;
-                            if (name == null) {
-                                annotationValues = Collections.emptyList();
-
-                            } else {
-                                annotationValues = Collections.singletonList(AnnotationValue.createStringValue("value", name));
-                            }
-                            transform.add(create(jaxRsAnnotation, annotation.target(), annotationValues));
-
-                            boolean required = true; // the default value
-                            String defaultValueStr = DEFAULT_NONE; // default value of @RequestMapping#defaultValue
-                            AnnotationValue defaultValue = annotation.value("defaultValue");
-                            if (defaultValue != null) {
-                                defaultValueStr = defaultValue.asString();
-                                required = false; // implicitly set according to the javadoc of @RequestMapping#defaultValue
-                            } else {
-                                AnnotationValue requiredValue = annotation.value("required");
-                                if (requiredValue != null) {
-                                    required = requiredValue.asBoolean();
-                                }
-                            }
-                            if (!required) {
-                                transform.add(create(DEFAULT_VALUE, annotation.target(),
-                                        Collections
-                                                .singletonList(AnnotationValue.createStringValue("value", defaultValueStr))));
-                            }
-                        } else if (annotationName.equals(PATH_VARIABLE)) {
-                            String name = getNameOrDefaultFromParamAnnotation(annotation);
-                            List<AnnotationValue> annotationValues = Collections.emptyList();
-                            if (name != null) {
-                                annotationValues = Collections.singletonList(AnnotationValue.createStringValue("value", name));
-                            }
-                            transform.add(create(REST_PATH_PARAM, annotation.target(), annotationValues));
-                        }
-                    }
-                }
-
-                transform.done();
-            }
-
-            private String getNameOrDefaultFromParamAnnotation(AnnotationInstance annotation) {
-                AnnotationValue nameValue = annotation.value("name");
-                if (nameValue != null) {
-                    return nameValue.asString();
-                } else {
-                    AnnotationValue value = annotation.value();
-                    if (value != null) {
-                        return value.asString();
-                    }
-                }
-                return null;
-            }
-
-            private void addStringArrayValuedAnnotation(Transformation transform, AnnotationTarget target, String[] value,
-                    DotName annotationDotName) {
-                if ((value != null) && value.length > 0) {
-                    AnnotationValue[] values = new AnnotationValue[value.length];
-                    for (int i = 0; i < values.length; i++) {
-                        values[i] = AnnotationValue.createStringValue("", value[i]);
-                    }
-                    transform.add(AnnotationInstance.create(annotationDotName, target,
-                            new AnnotationValue[] { AnnotationValue.createArrayValue("value", values) }));
-                }
-            }
-
-            private void addPathAnnotation(Transformation transform, AnnotationTarget target, String path) {
-                if (path == null) {
-                    return;
-                }
-                transform.add(AnnotationInstance.create(ResteasyReactiveDotNames.PATH, target,
-                        new AnnotationValue[] { AnnotationValue.createStringValue("value", replaceSpringWebWildcards(path)) }));
-            }
-
-            private String replaceSpringWebWildcards(String methodPath) {
-                if (methodPath.contains("/**")) {
-                    methodPath = methodPath.replace("/**", "{unsetPlaceHolderVar:.*}");
-                }
-                if (methodPath.contains("/*")) {
-                    methodPath = methodPath.replace("/*", "/{unusedPlaceHolderVar}");
-                }
-                /*
-                 * Spring Web allows the use of '?' to capture a single character. We support this by
-                 * converting each url path using it to a JAX-RS syntax of variable followed by a regex.
-                 * So '/car?/s?o?/info' would become '/{notusedPlaceHolderVar0:car.}/{notusedPlaceHolderVar1:s.o.}/info'
-                 */
-                String[] parts = methodPath.split("/");
-                if (parts.length > 0) {
-                    StringBuilder sb = new StringBuilder(methodPath.startsWith("/") ? "/" : "");
-                    for (int i = 0; i < parts.length; i++) {
-                        String part = parts[i];
-                        if (part.isEmpty()) {
-                            continue;
-                        }
-                        if (!sb.toString().endsWith("/")) {
-                            sb.append("/");
-                        }
-                        if ((part.startsWith("{") && part.endsWith("}")) || !part.contains("?")) {
-                            sb.append(part);
-                        } else {
-                            sb.append(String.format("{notusedPlaceHolderVar%s:", i)).append(part.replace('?', '.')).append("}");
-                        }
-                    }
-                    if (methodPath.endsWith("/")) {
-                        sb.append("/");
-                    }
-                    methodPath = sb.toString();
-                }
-                return methodPath;
-            }
-
         }));
-    }
 
-    // meant to be called with instances of MAPPING_ANNOTATIONS
-    private static String getSinglePathOfInstance(AnnotationInstance instance, String defaultPathValue) {
-        String[] paths = getPathsOfInstance(instance);
-        if ((paths != null) && (paths.length > 0)) {
-            return paths[0];
-        }
-        return defaultPathValue;
-    }
-
-    // meant to be called with instances of MAPPING_ANNOTATIONS
-    private static String[] getPathsOfInstance(AnnotationInstance instance) {
-        if (instance == null) {
-            return null;
-        }
-        AnnotationValue pathValue = instance.value("path");
-        if (pathValue != null) {
-            return pathValue.asStringArray();
-        }
-        AnnotationValue value = instance.value();
-        if (value != null) {
-            return value.asStringArray();
-        }
-        return null;
-    }
-
-    // meant to be called with instances of MAPPING_ANNOTATIONS and a property name that contains a String array value
-    private static String[] getStringArrayValueOfInstance(AnnotationInstance instance, String property) {
-        if (instance == null) {
-            return null;
-        }
-        AnnotationValue pathValue = instance.value(property);
-        if (pathValue != null) {
-            return pathValue.asStringArray();
-        }
-        return null;
+        reflectiveClass.produce(new ReflectiveClassBuildItem(true, false, false, SpringResourceBuilder.class.getName()));
     }
 
     /**
      * Make sure the controllers have the proper annotation and warn if not
      */
-    private void validateControllers(IndexView index) {
+    private void validateControllers(BeanArchiveIndexBuildItem beanArchiveIndexBuildItem) {
         Set<DotName> classesWithoutRestController = new HashSet<>();
         for (DotName mappingAnnotation : MAPPING_ANNOTATIONS) {
-            Collection<AnnotationInstance> annotations = index.getAnnotations(mappingAnnotation);
+            Collection<AnnotationInstance> annotations = beanArchiveIndexBuildItem.getIndex().getAnnotations(mappingAnnotation);
             for (AnnotationInstance annotation : annotations) {
                 ClassInfo targetClass;
                 if (annotation.target().kind() == AnnotationTarget.Kind.CLASS) {
@@ -423,35 +214,181 @@ public class SpringWebProcessor {
         if (!classesWithoutRestController.isEmpty()) {
             for (DotName dotName : classesWithoutRestController) {
                 LOGGER.warn("Class '" + dotName
-                        + "' uses a mapping annotation but the class itself was not annotated with '@RestController'. The mappings will therefore be ignored.");
+                        + "' uses a mapping annotation but the class itself was not annotated with '@RestContoller'. The mappings will therefore be ignored.");
             }
         }
     }
 
-    @BuildStep
-    public void registerStandardExceptionMappers(BuildProducer<ExceptionMapperBuildItem> producer) {
-        producer.produce(new ExceptionMapperBuildItem(ResponseStatusExceptionMapper.class.getName(),
-                ResponseStatusException.class.getName(), Priorities.USER, false));
+    @BuildStep(onlyIf = IsDevelopment.class)
+    @Record(STATIC_INIT)
+    public void registerWithDevModeNotFoundMapper(BeanArchiveIndexBuildItem beanArchiveIndexBuildItem,
+            ExceptionMapperRecorder recorder) {
+        IndexView index = beanArchiveIndexBuildItem.getIndex();
+        Collection<AnnotationInstance> restControllerAnnotations = index.getAnnotations(REST_CONTROLLER_ANNOTATION);
+        if (restControllerAnnotations.isEmpty()) {
+            return;
+        }
+
+        Map<String, NonJaxRsClassMappings> nonJaxRsPaths = new HashMap<>();
+        for (AnnotationInstance restControllerInstance : restControllerAnnotations) {
+            String basePath = "/";
+            ClassInfo restControllerAnnotatedClass = restControllerInstance.target().asClass();
+
+            AnnotationInstance requestMappingInstance = restControllerAnnotatedClass.classAnnotation(REQUEST_MAPPING);
+            if (requestMappingInstance != null) {
+                String basePathFromAnnotation = getMappingValue(requestMappingInstance);
+                if (basePathFromAnnotation != null) {
+                    basePath = basePathFromAnnotation;
+                }
+            }
+            Map<String, String> methodNameToPath = new HashMap<>();
+            NonJaxRsClassMappings nonJaxRsClassMappings = new NonJaxRsClassMappings();
+            nonJaxRsClassMappings.setMethodNameToPath(methodNameToPath);
+            nonJaxRsClassMappings.setBasePath(basePath);
+
+            List<MethodInfo> methods = restControllerAnnotatedClass.methods();
+
+            // go through each of the methods and see if there are any mapping Spring annotation from which to get the path
+            METHOD: for (MethodInfo method : methods) {
+                String methodName = method.name();
+                String methodPath;
+                // go through each of the annotations that can be used to make a method handle an http request
+                for (DotName mappingClass : MAPPING_ANNOTATIONS) {
+                    AnnotationInstance mappingClassAnnotation = method.annotation(mappingClass);
+                    if (mappingClassAnnotation != null) {
+                        methodPath = getMappingValue(mappingClassAnnotation);
+                        if (methodPath == null) {
+                            methodPath = ""; // ensure that no nasty null values show up in the output
+                        } else if (!methodPath.startsWith("/")) {
+                            methodPath = "/" + methodPath;
+                        }
+                        // record the mapping of method to the http path
+                        methodNameToPath.put(methodName, methodPath);
+                        continue METHOD;
+                    }
+                }
+            }
+
+            // if there was at least one controller method, add the controller since it contains methods that handle http requests
+            if (!methodNameToPath.isEmpty()) {
+                nonJaxRsPaths.put(restControllerAnnotatedClass.name().toString(), nonJaxRsClassMappings);
+            }
+        }
+
+        if (!nonJaxRsPaths.isEmpty()) {
+            recorder.nonJaxRsClassNameToMethodPaths(nonJaxRsPaths);
+        }
+    }
+
+    /**
+     * Meant to be called with an instance of any of the MAPPING_CLASSES
+     */
+    private String getMappingValue(AnnotationInstance instance) {
+        if (instance == null) {
+            return null;
+        }
+        if (instance.value() != null) {
+            return instance.value().asStringArray()[0];
+        } else if (instance.value("path") != null) {
+            return instance.value("path").asStringArray()[0];
+        }
+        return null;
     }
 
     @BuildStep
-    public void exceptionHandlingSupport(CombinedIndexBuildItem index,
-            BuildProducer<GeneratedClassBuildItem> generatedClassProducer,
-            BuildProducer<ExceptionMapperBuildItem> exceptionMapperProducer,
-            BuildProducer<ReflectiveClassBuildItem> reflectiveClassProducer,
-            BuildProducer<UnremovableBeanBuildItem> unremovableBeanProducer) {
+    public void registerProviders(BeanArchiveIndexBuildItem beanArchiveIndexBuildItem,
+            BuildProducer<ResteasyJaxrsProviderBuildItem> providersProducer) throws IOException {
+
+        //TODO only read this information once since it is exactly the same in ResteasyCommonProcessor#setupProviders
+        final Set<String> availableProviders = ServiceUtil.classNamesNamedIn(getClass().getClassLoader(),
+                "META-INF/services/" + Providers.class.getName());
+
+        final MediaTypeMap<String> categorizedReaders = new MediaTypeMap<>();
+        final MediaTypeMap<String> categorizedWriters = new MediaTypeMap<>();
+        final MediaTypeMap<String> categorizedContextResolvers = new MediaTypeMap<>();
+        final Set<String> otherProviders = new HashSet<>();
+
+        ResteasyCommonProcessor.categorizeProviders(availableProviders, categorizedReaders, categorizedWriters,
+                categorizedContextResolvers,
+                otherProviders);
+
+        boolean useAllAvailable = false;
+        Set<String> providersToRegister = new HashSet<>();
+
+        OUTER: for (DotName mappingClass : MAPPING_ANNOTATIONS) {
+            final Collection<AnnotationInstance> instances = beanArchiveIndexBuildItem.getIndex().getAnnotations(mappingClass);
+            for (AnnotationInstance instance : instances) {
+                if (collectProviders(providersToRegister, categorizedWriters, instance, "produces")) {
+                    useAllAvailable = true;
+                    break OUTER;
+                }
+                if (collectProviders(providersToRegister, categorizedContextResolvers, instance, "produces")) {
+                    useAllAvailable = true;
+                    break OUTER;
+                }
+
+                if (collectProviders(providersToRegister, categorizedReaders, instance, "consumes")) {
+                    useAllAvailable = true;
+                    break OUTER;
+                }
+            }
+        }
+
+        if (useAllAvailable) {
+            providersToRegister = availableProviders;
+        } else {
+            // for Spring Web we register all the json providers by default because using "produces" in @RequestMapping
+            // and friends is optional
+            providersToRegister.addAll(categorizedWriters.getPossible(MediaType.APPLICATION_JSON_TYPE));
+            // we also need to register the custom Spring related providers
+            providersToRegister.add(ResponseEntityFeature.class.getName());
+            providersToRegister.add(ResponseStatusFeature.class.getName());
+        }
+
+        for (String provider : providersToRegister) {
+            providersProducer.produce(new ResteasyJaxrsProviderBuildItem(provider));
+        }
+    }
+
+    private boolean collectProviders(Set<String> providersToRegister, MediaTypeMap<String> categorizedProviders,
+            AnnotationInstance instance, String annotationValueName) {
+        final AnnotationValue producesValue = instance.value(annotationValueName);
+        if (producesValue != null) {
+            for (String value : producesValue.asStringArray()) {
+                MediaType mediaType = MediaType.valueOf(value);
+                if (MediaType.WILDCARD_TYPE.equals(mediaType)) {
+                    // exit early if we have the wildcard type
+                    return true;
+                }
+                providersToRegister.addAll(categorizedProviders.getPossible(mediaType));
+            }
+        }
+        return false;
+    }
+
+    @BuildStep
+    public void generateExceptionMapperProviders(BeanArchiveIndexBuildItem beanArchiveIndexBuildItem,
+            BuildProducer<GeneratedClassBuildItem> generatedExceptionMappers,
+            BuildProducer<ResteasyJaxrsProviderBuildItem> providersProducer,
+            BuildProducer<ReflectiveClassBuildItem> reflectiveClassProducer) {
 
         TypesUtil typesUtil = new TypesUtil(Thread.currentThread().getContextClassLoader());
 
-        ClassOutput classOutput = new GeneratedClassGizmoAdaptor(generatedClassProducer, true);
-        generateMappersForResponseStatusOnException(exceptionMapperProducer, index.getIndex(), classOutput, typesUtil);
-        generateMappersForExceptionHandlerInControllerAdvice(exceptionMapperProducer, reflectiveClassProducer,
-                unremovableBeanProducer, index.getIndex(),
-                classOutput,
+        // Look for all exception classes that are annotated with @ResponseStatus
+
+        IndexView index = beanArchiveIndexBuildItem.getIndex();
+        ClassOutput classOutput = new GeneratedClassGizmoAdaptor(generatedExceptionMappers, true);
+        generateMappersForResponseStatusOnException(providersProducer, index, classOutput, typesUtil);
+        generateMappersForExceptionHandlerInControllerAdvice(providersProducer, reflectiveClassProducer, index, classOutput,
                 typesUtil);
     }
 
-    private void generateMappersForResponseStatusOnException(BuildProducer<ExceptionMapperBuildItem> exceptionMapperProducer,
+    @BuildStep
+    public void registerStandardExceptionMappers(BuildProducer<ResteasyJaxrsProviderBuildItem> providersProducer) {
+        providersProducer.produce(new ResteasyJaxrsProviderBuildItem(ResponseStatusExceptionMapper.class.getName()));
+    }
+
+    private void generateMappersForResponseStatusOnException(BuildProducer<ResteasyJaxrsProviderBuildItem> providersProducer,
             IndexView index, ClassOutput classOutput, TypesUtil typesUtil) {
         Collection<AnnotationInstance> responseStatusInstances = index
                 .getAnnotations(RESPONSE_STATUS);
@@ -464,21 +401,18 @@ public class SpringWebProcessor {
             if (AnnotationTarget.Kind.CLASS != instance.target().kind()) {
                 continue;
             }
-            DotName dotName = instance.target().asClass().name();
-            if (!typesUtil.isAssignable(Exception.class, dotName)) {
+            if (!typesUtil.isAssignable(Exception.class, instance.target().asClass().name())) {
                 continue;
             }
 
             String name = new ResponseStatusOnExceptionGenerator(instance.target().asClass(), classOutput).generate();
-            exceptionMapperProducer.produce(
-                    new ExceptionMapperBuildItem(name, dotName.toString(), Priorities.USER, false));
+            providersProducer.produce(new ResteasyJaxrsProviderBuildItem(name));
         }
     }
 
     private void generateMappersForExceptionHandlerInControllerAdvice(
-            BuildProducer<ExceptionMapperBuildItem> exceptionMapperProducer,
-            BuildProducer<ReflectiveClassBuildItem> reflectiveClassProducer,
-            BuildProducer<UnremovableBeanBuildItem> unremovableBeanProducer, IndexView index, ClassOutput classOutput,
+            BuildProducer<ResteasyJaxrsProviderBuildItem> providersProducer,
+            BuildProducer<ReflectiveClassBuildItem> reflectiveClassProducer, IndexView index, ClassOutput classOutput,
             TypesUtil typesUtil) {
 
         AnnotationInstance controllerAdviceInstance = getSingleControllerAdviceInstance(index);
@@ -512,16 +446,12 @@ public class SpringWebProcessor {
             // we need to generate one JAX-RS ExceptionMapper per Exception type
             Type[] handledExceptionTypes = exceptionHandlerInstance.value().asClassArray();
             for (Type handledExceptionType : handledExceptionTypes) {
-                String name = new ControllerAdviceExceptionMapperGenerator(method, handledExceptionType.name(),
+                String name = new ControllerAdviceAbstractExceptionMapperGenerator(method, handledExceptionType.name(),
                         classOutput, typesUtil).generate();
-                exceptionMapperProducer.produce(
-                        new ExceptionMapperBuildItem(name, handledExceptionType.name().toString(), Priorities.USER, false));
+                providersProducer.produce(new ResteasyJaxrsProviderBuildItem(name));
             }
-        }
 
-        // allow access to HttpHeaders from Arc.container()
-        unremovableBeanProducer.produce(
-                UnremovableBeanBuildItem.beanClassNames(ContextProducers.class.getName(), HttpHeaders.class.getName()));
+        }
     }
 
     private AnnotationInstance getSingleControllerAdviceInstance(IndexView index) {
@@ -536,55 +466,6 @@ public class SpringWebProcessor {
         }
 
         return controllerAdviceInstances.iterator().next();
-    }
-
-    @BuildStep
-    public MethodScannerBuildItem responseEntitySupport() {
-        return new MethodScannerBuildItem(new MethodScanner() {
-            @Override
-            public List<HandlerChainCustomizer> scan(MethodInfo method, ClassInfo actualEndpointClass,
-                    Map<String, Object> methodContext) {
-                DotName returnTypeName = method.returnType().name();
-                if (returnTypeName.equals(RESPONSE_ENTITY)) {
-                    return Collections.singletonList(new FixedHandlerChainCustomizer(new ResponseEntityHandler(),
-                            HandlerChainCustomizer.Phase.AFTER_METHOD_INVOKE));
-                }
-                return Collections.emptyList();
-            }
-        });
-    }
-
-    @BuildStep
-    public MethodScannerBuildItem responseStatusSupport() {
-        return new MethodScannerBuildItem(new MethodScanner() {
-            @Override
-            public List<HandlerChainCustomizer> scan(MethodInfo method, ClassInfo actualEndpointClass,
-                    Map<String, Object> methodContext) {
-                AnnotationInstance responseStatus = method.annotation(RESPONSE_STATUS);
-                if (responseStatus != null) {
-                    int newStatus = Response.Status.INTERNAL_SERVER_ERROR.getStatusCode(); // default value for @ResponseStatus
-                    AnnotationValue codeValue = responseStatus.value("code");
-                    if (codeValue != null) {
-                        newStatus = HttpStatus.valueOf(codeValue.asEnum()).value();
-                    } else {
-                        AnnotationValue value = responseStatus.value();
-                        if (value != null) {
-                            newStatus = HttpStatus.valueOf(value.asEnum()).value();
-                        }
-                    }
-
-                    ResponseStatusHandler handler = new ResponseStatusHandler();
-                    handler.setNewResponseCode(newStatus);
-                    handler.setDefaultResponseCode(
-                            method.returnType().kind() != Type.Kind.VOID ? Response.Status.OK.getStatusCode()
-                                    : Response.Status.NO_CONTENT.getStatusCode());
-                    return Collections.singletonList(
-                            new FixedHandlerChainCustomizer(handler, HandlerChainCustomizer.Phase.AFTER_RESPONSE_CREATED));
-                }
-
-                return Collections.emptyList();
-            }
-        });
     }
 
 }
